# clothing-database-managment-system

./: CMakeLists.txt  ClothingManager.cpp  ClothingManager.h  LICENSE  main.cpp  unit_tests.cpp
include/: ClothingManager.h
src/: ClothingManager.cpp  main.cpp
